<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/inputracerViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/data_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/inputracerViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputracerViewName"
        android:layout_marginTop="30dp"
        android:text="@string/data_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/inputracerViewTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputracerViewNumber"
        android:layout_marginTop="30dp"
        android:text="@string/data_town"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/inputracerTrailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputracerViewTown"
        android:layout_marginTop="60dp"
        android:text="@string/data_trailer" />

    <CheckBox
        android:id="@+id/inputracerSlalom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputracerTrailer"
        android:layout_marginTop="15dp"
        android:text="@string/data_slalom" />

    <CheckBox
        android:id="@+id/inputracerDrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputracerSlalom"
        android:layout_marginTop="15dp"
        android:text="@string/data_drag" />

    <CheckBox
        android:id="@+id/inputracerSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inputracerTrailer"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:text="@string/data_sex" />

    <EditText
        android:id="@+id/inputracerEditTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputracerViewTown"
        android:layout_alignBottom="@+id/inputracerViewTown"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputracerEditNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputracerViewNumber"
        android:layout_alignBottom="@+id/inputracerViewNumber"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <EditText
        android:id="@+id/inputracerEditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputracerViewName"
        android:layout_alignBottom="@+id/inputracerViewName"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/inputracerbtnupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/inputracerSlalom"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_update" />

    <Button
        android:id="@+id/inputracerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputracerbtnupdate"
        android:layout_alignTop="@+id/inputracerDrag"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/inputracerbtndelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inputracerbtn"
        android:layout_alignRight="@+id/inputracerSex"
        android:text="@string/btn_delete" />

</RelativeLayout>