<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2" >
    </ListView>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/draground1Text1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/data_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/draground1Text2"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/data_number"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/draground1Text3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/data_time"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/draground1Text4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/data_error"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/draground1Text5"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/data_finaltime"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</RelativeLayout>
